# gta-reversed

./: .gitignore  CLAUDE.md
.claude/agents/: codebase-explorer.md
.claude/report/: dll-injection-report.md  physics-system-report.md  vehicle-system-report.md
.claude/rules/: animation-system.md  audio-system.md  collision-system.md  core-types.md  entity-system.md  event-system.md  extensions.md  hooks-and-bugfixes.md  root-game-sa.md  script-system.md  task-system.md
.claude/skills/explain-system/: SKILL.md
.claude/skills/explore-subsystem/: SKILL.md
.claude/skills/find-dependencies/: SKILL.md
.claude/skills/find-patterns/: SKILL.md
docs/: BuildAndRunGuide.md  CodingGuidelines.md  ReversedClasses.md
logger_plugin/: CMakeLists.txt  automation_example.txt
logger_plugin/src/: log.h  main.cpp  mem.h  menu_monitor.cpp  menu_monitor.h  pad.h  script.cpp  script.h  skip_intro.cpp  skip_intro.h
source/: dllmain.cpp
source/app/: app_debug.cpp
source/game_sa/Core/: PtrList.h  PtrListDoubleLink.h  PtrListSingleLink.h
